Prevent logo text from wrapping to next line

--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -59,6 +59,8 @@
   margin: 0;
   font-size: 24px;
   color: #ffffff;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .logo-sub-text img {
